<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_border_10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:text="@string/tv_chon_donvi"
        android:textColor="@color/md_black"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_xlc_ph_xem"
            android:textColor="@color/md_white"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fancy:srcCompat="@drawable/ic_close_white_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_unit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/_40dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingRight="@dimen/_40dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/tv_luu"
            fancy:fb_defaultColor="@color/md_blue_a700"
            fancy:fb_radius="@dimen/_5dp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_16dp"
            android:paddingLeft="@dimen/_40dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingRight="@dimen/_40dp"
            android:paddingBottom="@dimen/_10dp"
            android:text="@string/tv_dong"
            fancy:fb_defaultColor="@color/md_green_a700"
            fancy:fb_radius="@dimen/_5dp" />
    </LinearLayout>

</LinearLayout>