<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white"
    android:orientation="vertical"
    tools:context=".view.activity.AddPersonWorkActivity">

    <include
        android:id="@+id/toolbarDetail"
        layout="@layout/toolbar_send_chidao" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/string_chon_donvi_canhan"
                android:textColor="@color/md_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/spin_unit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_border_radius"
                android:drawableRight="@drawable/ic_expand_more_black_24dp"
                android:focusable="false"
                android:padding="@dimen/_10dp"
                android:text="@string/UNIT_ACCOUNT"
                android:textColor="@color/md_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <EditText
                android:id="@+id/spin_person"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_border_radius"
                android:drawableRight="@drawable/ic_expand_more_black_24dp"
                android:focusable="false"
                android:padding="@dimen/_10dp"
                android:text="@string/str_ca_nhan"
                android:textColor="@color/md_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_unit" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/str_danhsach_canhan_donvi"
                android:textColor="@color/md_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_person" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_border_top"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/string_canhan_donvi_xuly" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/string_ngay_het_han" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/md_black" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_unit_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/_16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.0">

            </android.support.v7.widget.RecyclerView>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/_20dp"
                android:paddingTop="@dimen/_10dp"
                android:paddingRight="@dimen/_20dp"
                android:paddingBottom="@dimen/_10dp"
                android:text="@string/tv_capnhat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_close"
                fancy:fb_defaultColor="@color/md_blue_a700"
                fancy:fb_radius="@dimen/_5dp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/_20dp"
                android:paddingTop="@dimen/_10dp"
                android:paddingRight="@dimen/_20dp"
                android:paddingBottom="@dimen/_10dp"
                android:text="@string/tv_dong"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_update"
                app:layout_constraintStart_toStartOf="parent"
                fancy:fb_defaultColor="@color/md_green_a700"
                fancy:fb_radius="@dimen/_5dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>